--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+				<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 				<li>YASH TUM YAHA</li>
 				</ul>
