--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
 				<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-				<li>YASH TUM YAHA</li>
+				<li>YASH YAHA</li>
 				</ul>
 			</footer>
 		</body>
