--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ ul.posts li {
 .stake-division {
   display: flex;
   justify-content: space-between;
+  padding: 30px 0;
 }
 
 body {
@@ -54,11 +55,11 @@ body {
 
 .icon-bar a {
   float: left;
-  width: 20%;
+  width: 8%;
   text-align: center;
   padding: 12px 0;
   transition: all 0.3s ease;
-  font-size: 36px;
+  font-size: 23px;
 }
 
 .icon-bar a:hover {
@@ -78,9 +79,14 @@ body {
 }
 
 .stake-header {
-  padding: 30px;
+  padding: 15px 0 0 20px;
+  font-size: 28px;
+  font-weight: 600;
 }
 
+.weight-600 {
+  font-weight: 600;
+}
 .col-1 {
   padding: 20px;
 }
@@ -88,18 +94,26 @@ body {
 .col-2 {
   padding: 20px;
   width: 400px;
+  font-weight: 600;
 }
 
 .input-styling {
-  background: dimgrey;
-  padding: 10px 0 10px 10px;
+  background: #555;
+  padding: 10px 0 0 10px;
   margin-bottom: 10px;
   width: 420px;
+  color: dodgerblue;
+  border-bottom: 2px solid dodgerblue;
+  display: flex;
+  justify-content: space-between;
 }
 
 .stake {
   background-color: black;
-  padding: 20px;
+  padding: 10px 18px 5px 10px;
+  background-color: black;
+  margin-top: 10px;
+  height: 25px;
 }
 
 .stake-span {
@@ -119,6 +133,7 @@ body {
 }
 th {
   text-align: left;
+  border: 1px solid beige;
 }
 
 .padding-left {
@@ -129,4 +144,70 @@ th {
   font-weight: 600;
   padding: 20px 0 0 20px;
 }
+.background-black {
+  color: dodgerblue;
+  border-bottom: 2px solid dodgerblue;
+}
 
+.logo {
+  height: 23px;
+}
+.dark-grey {
+  color: darkgray;
+}
+
+.grey-border {
+  border-bottom: 2px solid darkgray;
+}
+
+.add-metamask {
+  background-color: darkorange;
+  color: white;
+  float: right;
+  width: 8% !important;
+  margin-left: 22% !important;
+  text-align: center;
+  font-size: 12px !important;
+  padding: 5px 0 !important;
+  margin-top: 15px;
+  font-weight: 600 !important;
+}
+
+.english-text {
+  color: white;
+  text-align: center;
+  font-size: 12px !important;
+  padding: 5px 0 !important;
+  margin-top: 12px;
+  font-weight: 600 !important;
+  font-size: 16px !important;
+  margin-left: 30px;
+  width: 0% !important;
+}
+
+.down-icon {
+  width: 0% !important;
+  color: white;
+  font-size: 20px !important;
+  width: 2% !important;
+  margin-left: 60px;
+  padding: 8px 0 !important;
+}
+.padding-25 {
+  padding-right: 25px;
+  text-align: center;
+}
+
+
+.color-black{
+    background-color: black;
+    font-size: 10px;
+    font-weight: 600;
+    padding: 2px 10px;
+    margin-bottom: 10px;
+}
+
+.calender{
+    font-size: 14px !important;
+    padding: 4px !important;
+}
